--- a/UnitConverter/Converter.SDK/Converter.SDK.csproj
+++ b/UnitConverter/Converter.SDK/Converter.SDK.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClassType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Unit.cs" />
     <Compile Include="UnitConverter.cs" />
