--- a/UnitConverter/CurrencyConverter/CurrencyConverter.csproj
+++ b/UnitConverter/CurrencyConverter/CurrencyConverter.csproj
@@ -57,4 +57,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>copy $(SolutionDir)UnitConverter\bin\Debug\plugins\CurrencyConverterPlugin.dll $(SolutionDir)\UnitConverter.Web\bin\plugins
+copy $(SolutionDir)UnitConverter\bin\Debug\plugins\CurrencyConverterPlugin.pdb $(SolutionDir)\UnitConverter.Web\bin\plugins</PostBuildEvent>
+  </PropertyGroup>
 </Project>
