--- a/Zjazd4-5/WPFConverterv2/UnitCoverterPart2/UnitCoverterPart2/UnitCoverterPart2.csproj
+++ b/Zjazd4-5/WPFConverterv2/UnitCoverterPart2/UnitCoverterPart2/UnitCoverterPart2.csproj
@@ -80,18 +80,6 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="IStatisticsRepository.cs" />
-    <Compile Include="Model\EntityModel.cs" />
-    <Compile Include="Model\MyStatistics2.cs" />
-    <Compile Include="Model\sysdiagrams.cs" />
-    <Compile Include="Services\ConvertersService.cs" />
-    <Compile Include="Services\TemperatureConverter.cs" />
-    <Compile Include="Services\WeightConverter.cs" />
-    <Compile Include="Services\LenghtConverter.cs" />
-    <Compile Include="StatisticDTO.cs" />
-    <Compile Include="StatisticsAzureStorageRepository.cs" />
-    <Compile Include="StatisticsEntity.cs" />
-    <Compile Include="StatisticsSqlRepository.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -136,6 +124,10 @@
     <ProjectReference Include="..\Converter.SDK\Converter.SDK.csproj">
       <Project>{ead57d6e-3be0-42c6-874b-4c46627b1eec}</Project>
       <Name>Converter.SDK</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\UnitConverter.Logic\UnitConverter.Logic.csproj">
+      <Project>{9f1c97b8-2073-4f21-bb81-3f281126d29e}</Project>
+      <Name>UnitConverter.Logic</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
