--- a/JIPP5-LAB.WebApp/packages.config
+++ b/JIPP5-LAB.WebApp/packages.config
@@ -9,6 +9,10 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.TelemetryCorrelation" version="1.0.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.4" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.4" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net472" />
@@ -24,6 +28,7 @@
   <package id="Unity.Abstractions" version="5.11.3" targetFramework="net472" />
   <package id="Unity.Container" version="5.11.1" targetFramework="net472" />
   <package id="Unity.Mvc" version="5.11.1" targetFramework="net472" />
+  <package id="Unity.WebAPI" version="5.4.0" targetFramework="net472" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
   <package id="WindowsAzure.Storage" version="9.3.3" targetFramework="net472" />
