--- a/JIPP5-LAB/JIPP5-LAB.csproj
+++ b/JIPP5-LAB/JIPP5-LAB.csproj
@@ -89,6 +89,7 @@
     <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.3\lib\netstandard2.0\System.Threading.Tasks.Extensions.dll</HintPath>
     </Reference>
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -114,6 +115,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Constants\UIElements.cs" />
+    <Compile Include="ConverterApi.cs" />
     <Compile Include="Views\ConversionHistoryView.xaml.cs">
       <DependentUpon>ConversionHistoryView.xaml</DependentUpon>
     </Compile>
