--- a/Converter.Logic/Converter.Logic.csproj
+++ b/Converter.Logic/Converter.Logic.csproj
@@ -25,6 +25,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -34,6 +35,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject />
@@ -67,6 +69,8 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -82,14 +86,14 @@
     <Compile Include="Converter\ConverterM.cs" />
     <Compile Include="Converter\ConvertersService.cs" />
     <Compile Include="Converter\ConverterT.cs" />
+    <Compile Include="Model\StatisticContext.cs" />
     <Compile Include="StatisticDTO.cs" />
     <Compile Include="Model\StatisticEntity.cs" />
-    <Compile Include="Model\Statystyki.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\IStatisticRepository.cs" />
-    <Compile Include="Model\StatisticContext.cs" />
     <Compile Include="Repository\StatisticsAzureStorageRepository.cs" />
     <Compile Include="Repository\StatisticsSqlRepository.cs" />
+    <Compile Include="Model\Statystyki.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
