--- a/Konwerter/App.config
+++ b/Konwerter/App.config
@@ -1,9 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <configSections></configSections>
-  <connectionStrings>
-    <add name="Statistics" connectionString="data source=localhost\SQLEXPRESS;initial catalog=Konwerter;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-  </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
@@ -20,4 +16,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <connectionStrings>
+    <add name="Statistics" connectionString="data source=DESKTOP-UG796BQ;initial catalog=Konwerter;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
