--- a/Konwerter_jednostek/Konwerter_jednostek.csproj
+++ b/Konwerter_jednostek/Konwerter_jednostek.csproj
@@ -11,8 +11,13 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="4.9.4" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="System.Data.SqlClient" Version="4.7.0" />
     <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\KonwerterJednostek.Loggic\KonwerterJednostek.Logic.csproj" />
   </ItemGroup>
 
   <ItemGroup>
@@ -20,6 +25,7 @@
       <HintPath>..\SDK\bin\Debug\SDK.dll</HintPath>
     </Reference>
     <Reference Include="System.Configuration" />
+    <Reference Include="System.Web" />
   </ItemGroup>
 
 </Project>
