--- a/konwerter_v0.9-final/Converter.logic/packages.config
+++ b/konwerter_v0.9-final/Converter.logic/packages.config
@@ -2,9 +2,17 @@
 <packages>
   <package id="Autofac" version="4.9.4" targetFramework="net472" />
   <package id="Autofac.Extensions.DependencyInjection" version="5.0.1" targetFramework="net472" />
+  <package id="Autofac.WebApi2" version="4.3.1" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.0" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.Azure.KeyVault.Core" version="3.0.4" targetFramework="net472" />
+  <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="2.9.8" targetFramework="net472" developmentDependency="true" />
+  <package id="Microsoft.CodeAnalysis.VersionCheckAnalyzer" version="2.9.8" targetFramework="net472" developmentDependency="true" />
+  <package id="Microsoft.CodeQuality.Analyzers" version="2.9.8" targetFramework="net472" developmentDependency="true" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="3.1.0" targetFramework="net472" />
+  <package id="Microsoft.NetCore.Analyzers" version="2.9.8" targetFramework="net472" developmentDependency="true" />
+  <package id="Microsoft.NetFramework.Analyzers" version="2.9.8" targetFramework="net472" developmentDependency="true" />
   <package id="Microsoft.Rest.ClientRuntime" version="2.3.21" targetFramework="net472" />
   <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.19" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
