--- a/konwerter/JIPP5.WEB/packages.config
+++ b/konwerter/JIPP5.WEB/packages.config
@@ -3,6 +3,7 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="Autofac" version="4.9.4" targetFramework="net472" />
   <package id="Autofac.Mvc5" version="4.0.2" targetFramework="net472" />
+  <package id="Autofac.WebApi2" version="4.3.1" targetFramework="net472" />
   <package id="bootstrap" version="3.3.7" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.0" targetFramework="net472" />
   <package id="jQuery" version="3.3.1" targetFramework="net472" />
@@ -11,6 +12,9 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.4" targetFramework="net472" />
   <package id="Microsoft.AspNet.TelemetryCorrelation" version="1.0.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net472" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.6" targetFramework="net472" />
