Jakub Michalik zadanie 5

--- a/Konwerter/Konwerter.csproj
+++ b/Konwerter/Konwerter.csproj
@@ -110,9 +110,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config">
-      <SubType>Designer</SubType>
-    </None>
+    <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Konwerter.SDK\Konwerter.SDK.csproj">
