Patryk Rosłoniec - zadanie 3

--- a/Z502-Patryk-Rosloniec/UnitCoverterPart2/UnitCoverterPart2/UnitCoverterPart2/UnitCoverterPart2.csproj
+++ b/Z502-Patryk-Rosloniec/UnitCoverterPart2/UnitCoverterPart2/UnitCoverterPart2/UnitCoverterPart2.csproj
@@ -77,12 +77,14 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="AppData.cs" />
     <Compile Include="IStatisticsRepository.cs" />
-    <Compile Include="ComputingMethods.cs" />
     <Compile Include="Model\Statistic.cs" />
     <Compile Include="Model\StatisticsEntity.cs" />
     <Compile Include="Model\StatisticsModel.cs" />
+    <Compile Include="Services\ConvertersService.cs" />
+    <Compile Include="Services\TemperatureConverter.cs" />
+    <Compile Include="Services\WeightConverter.cs" />
+    <Compile Include="Services\LenghtConverter.cs" />
     <Compile Include="StatisticDTO.cs" />
     <Compile Include="StatisticsAzureStorageRepository.cs" />
     <Compile Include="StatisticsSqlRepository.cs" />
@@ -125,6 +127,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Converter.SDK\Converter.SDK.csproj">
+      <Project>{ead57d6e-3be0-42c6-874b-4c46627b1eec}</Project>
+      <Name>Converter.SDK</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
