--- a/Z504-Adrian-Szymanski/UnitCoverterPart2/UnitCoverterPart2/App.config
+++ b/Z504-Adrian-Szymanski/UnitCoverterPart2/UnitCoverterPart2/App.config
@@ -14,11 +14,11 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="StatisticsModel" connectionString="data source=.\sqlexpress;initial catalog=UnitsConverter;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="EntityModel" connectionString="data source=PCU\SQLEXPRESS;initial catalog=MyConverter;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="StatisticsModel" connectionString="data source=PCU;initial catalog=UnitsConverter;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="EntityModel" connectionString="data source=PCU;initial catalog=MyConverter;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
-    <add key="StatisticsRepository" value="AzureStorage" />
+    <add key="StatisticsRepository" value="AzureStorage" />  
     
   </appSettings>
   <runtime>
